# Voxel-Mesher

./: .gitignore  .gitmodules  CMakeLists.txt
include/: CMakeLists.txt  Camera.h  Canvas.h  GLScreen.h  GLWindow.h  MatrixTypes.h  Player.h  Shader.h  VObject.h
resources/shaders/: CMakeLists.txt  Lights.frag  Trivial.frag  Trivial.vert  VertexColor.frag  VertexColor.vert
src/: CMakeLists.txt  Canvas.cpp  GLWindow.cpp  Main.cpp  Player.cpp  VObject.cpp  VoxelMesher.cpp  stb_image.cpp
test/: MatrixPrinting.h  VObjectTest.cpp
